Add support for selecting cases, and to add an API Key